--- a/src/screens/Landing/Landing.css
+++ b/src/screens/Landing/Landing.css
@@ -6,7 +6,7 @@ section {
   font-family: 'HelveticaNeue';
 }
 body {
-  scroll-behavior: smooth;
+  scroll-behavior: unset !important;
 }
 .heavy_weight {
   font-weight: 900 !important;
